--- a/src/Components/Search/Search.scss
+++ b/src/Components/Search/Search.scss
@@ -1,29 +1,32 @@
 .search-container {
   position: absolute;
-  top: 1%;
+  top: 2%;
   left: 5%;
+  // border: 1px solid red;
+  z-index: 2;
 }
 
 .search-form {
-  padding: 1rem;
-  margin: 0.5rem;
+  padding: 0 0.5rem;
+  margin: 0 1rem;
 }
 .search-underline {
-  border-bottom: 2px solid white;
+  // border-bottom: 2px solid white;
   padding: 1rem;
 }
 .search-icon {
   color: white;
-  font-size: 2rem;
-  padding-right: 1rem;
+  font-size: 1.5rem;
+  padding-right: 0.5rem;
 }
 
 .search-form-input {
   background: inherit;
   border: none;
   color: white;
-  font-size: 2rem;
+  font-size: 1.5rem;
   &:focus {
     outline: none;
+    border-bottom: 2px solid white;
   }
 }
